policies page update

--- a/policies/geriatric-care.html.slim
+++ b/policies/geriatric-care.html.slim
@@ -28,9 +28,8 @@
       a.post-tag href="http://iing.tw/tags/長期照顧" 長期照顧
 
   .section
-    blockquote
-      p 有過照顧經驗的人都知道，如果沒有很大的耐心，即使是最親近的家人，也會感到辛苦。長期照顧是台灣許多家庭正在面臨的負擔。作為一個政治人物，我的責任就是提出問題的解決方案。
-    .blockquote-name.animation.slide-up 蔡英文
+    blockquote: p 有過照顧經驗的人都知道，如果沒有很大的耐心，即使是最親近的家人，也會感到辛苦。長期照顧是台灣許多家庭正在面臨的負擔。作為一個政治人物，我的責任就是提出問題的解決方案。
+    .blockquote-name: span 蔡英文
 
   .section-class.gray-block.scroll-spy-section#section-1 data-spy-index="1"
     span.animation.fade-in 主張
@@ -74,22 +73,21 @@
       .multi-col-content-inner
         .col-3-content
           p.text-center 65 歲以上人口總佔比
-          .line.people-ratio-data
+          .people-ratio-data
         .col-3-content
           p.text-center 平均年齡
-          .line.people-average-data
+          .people-average-data
         .col-3-content
           p.text-center 總人口數
-          .line.people-population-data
+          .people-population-data
     .center-content
       .text-content
         p.text-center 資料來源：中華民國人口推計 - 採低推計預估：<a href="http://www.ndc.gov.tw/Content_List.aspx?n=84223C65B6F94D72" target="_blank">國家發展委員會</a>（2014年）；<a href="https://docs.google.com/spreadsheets/d/1rKyLNlVI-I4kMSbuuisBQVOAzyK7NTSmdOpk3KPePZ8/edit?usp=sharing" target="_blank">資料計算表</a>
         p 根據政府的統計資料，老人的平均失能時間長達7年。2014年時，全國失能人口約有75萬人，五年後將高達86萬人，若以500萬的老年人口計算，2025年，健保規模將突破1兆，其中56％使用於老年人身上。當「超高齡社會」來臨時，不只是健保，許多社會保險也將面臨破產壓力。
 
   .section.white-block
-    blockquote.bigtext.animation.slide-up
-      p 老人本身不是問題，政府的照顧政策失靈才是問題。政府不應該把照顧老人的責任留給家庭，應該讓每一個需要的人都享有基本的照顧服務。
-    .blockquote-name.animation.slide-up 蔡英文
+    blockquote.bigtext.animation.slide-up: p 老人本身不是問題，政府的照顧政策失靈才是問題。政府不應該把照顧老人的責任留給家庭，應該讓每一個需要的人都享有基本的照顧服務。
+    .blockquote-name.animation.slide-up: span 蔡英文
 
   .section
     .multi-col-content
