--- a/policies/housing-policy.html.slim
+++ b/policies/housing-policy.html.slim
@@ -6,16 +6,15 @@
 .content.has-sub-menu
   .scroll-spy-menu
     ul.scroll-spy-menu-inner
-      li.scroll-spy-menu-item: a href="#section-1" 主張
-      li.scroll-spy-menu-item: a href="#section-2" 原因
-      li.scroll-spy-menu-item: a href="#section-3" 政策
-      li.scroll-spy-menu-item: a href="#section-4" 總結
+      li.scroll-spy-menu-item: a href="#section-1" 現狀
+      li.scroll-spy-menu-item: a href="#section-2" 政策
+      li.scroll-spy-menu-item: a href="#section-3" 總結
   .policy-header style="background-image: url('/images/policies_image/food_safely/page_header_bg.jpg')"
     .header-title
       .header-title-inner
         ul.policy-category: li: a href="http://iing.tw/categories/政策" 政策
-        h1.main-title 食安五環改革方案
-        h2.main-sub-title 我們的食品安全嗎？
+        h1.main-title 住宅政策懶人包
+        h2.main-sub-title
   .post
     .post-share
       span.post-share-title 分享：
@@ -25,89 +24,48 @@
       a.post-share-btn.icon-line href="#"
     .post-meta
       span.post-date 2015.9.4
-      a.post-tag href="http://iing.tw/tags/食品安全" 食品安全
+      a.post-tag href="http://iing.tw/tags/食品安全" 住宅政策
 
   .section
-    blockquote: p 食安管理的重點在於「安全」這兩個字，現代政府的責任，已經不只是要讓民眾「有得吃」而已，而是要建立從農場到餐桌的安全體系，讓民眾「吃得安心又安全」。
+    blockquote: p 我今天要講一段具有歷史意義的話，一段感動群眾的話，一段深植人心的話。讓這段話語成為台灣改變的力量。
     .blockquote-name: span 蔡英文
 
   .section-class.gray-block.scroll-spy-section#section-1 data-spy-index="1"
-    span.animation.fade-in 主張
-
-  .section
-    blockquote.bigtext.animation.slide-up: p 很多食安專家告訴我，食安問題之所以層出不窮，是因為過去的政府所做的，是「食品管理」。但是，「食品管理」絕對不等於「食安管理」。
-    .blockquote-name.animation.slide-up: span 蔡英文
-
-  .section.gray-block
-    .center-content
-      .text-content
-        h3.section-title 從「食品衛生管理」到<br>「食品安全」
-    .center-content
-      ol.text-content.order-list
-        li.animation.fade-in
-          h4.section-sub-title 危害防堵：「從海關到馬桶」全面防堵
-          p 傳統的「食品衛生管理」思維僅針對食品生產過程當中，特定生產階段完成後的監督；「食品安全」則是「從農場到馬桶」，從原料的海關品質就開始管控，到食用後的健康影響，都要包括進去，徹底完成生產過程中可能產生的危害予以防堵。
-        li.animation.fade-in
-          h4.section-sub-title 風險管理： 「從衛生署到環保署」跨機關管理
-          p 從近年造成食安危機的原因來看，主要都發生在「食品衛生管理」管不到的地方。由此可知食品衛生管理的措施，尚無法遏止食安危機再次發生。而「食品安全」則是跨機關合作，兼具質量、具全面性、通盤性。
-        li.animation.fade-in
-          h4.section-sub-title 全面性瞭解：「從法律到醫療」綜合風險管理
-          p 「食品衛生管理」重視規範與執行後的明確成效；「食品安全」則是從根本性、系統性、更廣泛的角度，去瞭解食品生產流程可能牽涉到的風險。具體而言，則包括從法制、貿易、毒理學、公共政策、廠商內外部管理、溝通、風險評估到醫療等諸多面向。
-
-  .section-class.gray-block.scroll-spy-section#section-2 data-spy-index="2"
-    span.animation.fade-in 原因
+    span.animation.fade-in 現狀
 
   .section.image-theme style="background-image: url('/images/policies_image/food_safely/reason_bg.jpg')"
     .center-content
       .text-content
-        h3.section-title 我們的食品安全嗎？
-        h4.section-sub-title 全國有 84.5％ 的媽媽，對政府目前的食安政策感到憂慮。食安問題已是全國媽媽們第一擔心的問題。我們的食安，到底怎麼了？
-      ul.text-content.timeline.animation
-        li.fade-in
-          span.time 2008
-          span.dot: img src="/images/policies_image/food_safely/fs1_1.png"
-          .timeline-content: p 中國三聚氰胺毒奶流入台灣
-        li.fade-in.delay-200ms
-          span.time 2010
-          span.dot: img src="/images/policies_image/food_safely/fs1_2.png"
-          .timeline-content: p 知名豆乾引發肉毒桿菌中毒事件、紅茶冰含致癌原料
-        li.fade-in.delay-400ms
-          span.time 2011
-          span.dot: img src="/images/policies_image/food_safely/fs1_3.png"
-          .timeline-content: p 塑化劑飲料
-        li.fade-in.delay-600ms
-          span.time 2012
-          span.dot: img src="/images/policies_image/food_safely/fs1_4.png"
-          .timeline-content: p 瘦肉精牛肉
-        li.fade-in.delay-800ms
-          span.time 2013
-          span.dot: img src="/images/policies_image/food_safely/fs1_5.png"
-          .timeline-content: p 毒澱粉肆虐、胖達人香精麵包、山水劣質米混充台灣米、大統油混充銅葉綠素、毒醬油、豆乾使用油漆染料「皂黃」
-        li.fade-in.delay-1000ms
-          span.time 2014
-          span.dot: img src="/images/policies_image/food_safely/fs1_6.png"
-          .timeline-content: p 強冠餿水油、正義黑心油、頂新黑心油、吊白塊潤餅皮、工業用碳酸鎂胃藥、農藥超標手搖飲料、重金屬鼎王火鍋、雞蛋殘留抗生素、洗腎藥桶裝仙草
-        li.fade-in.delay-1200ms
-          span.time 2015
-          span.dot: img src="/images/policies_image/food_safely/fs1_7.png"
-          .timeline-content: p 一心防腐劑豆乾、吊白塊潤餅皮、黑心海帶、農藥超標手搖茶、碳酸鎂胡椒粉、孔雀綠蒲燒鰻、藥用石膏米血糕
-
-      .text-content
-        p 資料來源：2015.05.09. 民進黨民意調查中心 母親節調查
-      .text-content
-        h3.section-title 食安問題根源
+        h3.section-title 台灣居住現象的<br>「三高兩低」
       ol.text-content.order-list
         li.animation.fade-in
-          h4.section-sub-title 標章很多
-          p 現行複雜的多種農產品及食品認驗證及標章制度、作業規範（如GMP、CAS、GAP、TGAP、TAP、OTAP、UTAP等），共有十八種國家認證標章，連專家、學者、業者都不易釐清，急需進行制度的簡化作業。
+          h4.section-sub-title 高房價所得比14年
+          p 台北市房價所得比15.01，世界第一。新北市12.67，世界第三。
         li.animation.fade-in
-          h4.section-sub-title 主管很多
-          p 台灣的食安管理依照不同的主管項目，分別由衛生署、農委會、甚至經濟部、教育部、國防部與環保署等多個機關負責。容易產生業務重疊等現象。遇到食安問題，難以判斷問題源頭、負責機關，容易產生灰色地帶、相互推卸責任的現象。
+          h4.section-sub-title 高空屋率
+          p 行政院主計處2010年統計，全國平均空屋率19.3%。
         li.animation.fade-in
-          h4.section-sub-title 管控不足
-          p 根據環保署的資料指出，臺灣僅列管302種毒物，而國際上認定毒性較明確的化學物質6000種，每年多增加100多種新化學物質。急需投入高度資源和大量專業人力，才可以補足這個漏洞。
+          h4.section-sub-title 高房屋自有率
+          p 自有率88%，世界先進國家約50%。
+        li.animation.fade-in
+          h4.section-sub-title 低租屋率
+          p 行政院主計處2010年統計，全國平均租屋率10.0%。
+        li.animation.fade-in
+          h4.section-sub-title 低社會住宅率
+          p 2011年統計，台灣公有出租國宅佔全國住宅總量0.08%，其他各國：荷蘭34%、英國20%、日本6.06%、美國6%、韓國55%。
 
-  .section-class.gray-block.scroll-spy-section#section-3 data-spy-index="3"
+    .multi-col-content
+      .multi-col-content-inner
+        .col-2-content
+          .text-content.animation.fade-in
+            p 依據內政部編製房價負擔能力指標，2014 年底全國20縣市中有10縣市的房價負擔超過合理標準，其中台北市與新北市屬於負擔能力嚴重偏低狀況。從六大區域114處主要鄉鎮市區數據觀察，有24 處屬於房價負擔能力嚴重偏低，10 處屬偏低，26 處屬略低，顯示各縣市均存在房價負擔問題，並非雙北市獨有之問題。
+        .col-2-content
+          .text-content.animation.fade-in.delay-200ms
+            h4.section-sub-title 負擔能力指標定義與意義
+            p 房價所得比：房價所得比＝中位數房屋總價／家戶年可支配所得中位數。<br>貸款負擔率：貸款負擔率＝中位數房價貸款月攤還額家戶月可支配所得中位數。（以20年本利均等攤還，貸款成數七成計算）
+
+
+  .section-class.gray-block.scroll-spy-section#section-2 data-spy-index="2"
     span.animation.fade-in 政策
 
   .section.white-block
@@ -231,7 +189,7 @@
 
 
 
-  .section-class.gray-block.scroll-spy-section#section-4 data-spy-index="4"
+  .section-class.gray-block.scroll-spy-section#section-3 data-spy-index="3"
     span.animation.fade-in 總結
 
   .section
