--- a/sass/page/policies-page/_chartstyle.sass
+++ b/sass/page/policies-page/_chartstyle.sass
@@ -1,8 +1,37 @@
 .world-old-people-data, .taiwan-old-people-data
+  position: relative
+  width: 100%
+  height: 0
+  margin-bottom: 24px
+  padding-top: 60.4%
+
+  svg
+    position: absolute !important
+    top: 0
+    left: 0
+
   text
     fill: white
 
+  +at-breakpoint($pad)
+    max-width: 432px
+
 .people-pp-chart
+  .people-ratio-data, .people-average-data, .people-population-data
+    position: relative
+    width: 100%
+    height: 0
+    margin-bottom: 24px
+    padding-top: 100%
+
+    svg
+      position: absolute !important
+      top: 0
+      left: 0
+
+    +at-breakpoint($pad)
+      max-width: 284px
+
   .axis path, .axis line
     fill: none
     stroke: white
