改進 macho.js 在 inline-block 時頭個字為符號的情況

--- a/partial/_hero.html.slim
+++ b/partial/_hero.html.slim
@@ -12,7 +12,7 @@
         a.hero-block.small style="background-image: url('/images/hero-2.jpg')" href="http://melody.iing.tw" target="_blank"
           .hero-block-title
             .hero-block-title-inner
-              .title.auto-break-text 台灣美樂地
+              .title.auto-break-text 三隻小豬，點亮台灣
               .description.auto-break-text 這是一段文字敘述，可以寫大約50字左右，超過會沒辦法顯示
       .hero-block-wrap
         a.hero-block.small style="background-image: url('/images/hero-3.jpg')" href="http://donate.iing.tw" target="_blank"
