--- a/sass/page/policies-page/_base.sass
+++ b/sass/page/policies-page/_base.sass
@@ -1,6 +1,7 @@
 // container setting
 $content-width: 680px
 $figure-width: 960px
+$note-width: 480px
 @mixin policy-container($max-width)
   max-width: $max-width
   margin-left: auto
