--- a/partial/_header.html.slim
+++ b/partial/_header.html.slim
@@ -15,11 +15,12 @@
         a.menu-logo
         ul.primary-nav
           = nav_link_to "最新消息", "/posts/"
-          = nav_link_to "參選宣言", "#"
-          = nav_link_to "小英的人生旅途", "#"
+          = nav_link_to "英派", "#"
+          = nav_link_to "", "#"
           / = nav_link_to "願景", "#"
           = nav_link_to "加入志工", "/volunteers/new/"
           = nav_link_to "捐款", "#"
+          = nav_link_to "影片專區", "/video/"
 
         .menu-bottom
           - if !@language
