--- a/sass/all.scss
+++ b/sass/all.scss
@@ -43,6 +43,7 @@
 @import "partial/banner-block";
 @import "partial/animation";
 @import "partial/scroll-spy";
+@import "partial/video-hero";
 
 // ==== page ====
 @import "page/homepage";
