--- a/video/index.html.slim
+++ b/video/index.html.slim
@@ -1,1 +1,10 @@
 = render '/partial/header'
+
+.content
+
+  a.video-hero href="/video/show.html"
+    .video-content
+      h3.video-title.auto-break-text= zh_lorem_sentence
+      span.video-date 2015.10.04
+      p.video-summary.auto-break-text= zh_lorem_paragraph
+
