--- a/partial/_video-list.html.slim
+++ b/partial/_video-list.html.slim
@@ -1,6 +1,5 @@
 ul.video-list
-  - 6.times
+  - 12.times
     li
-      a.video-item style="background-image: url('/images/post-2.jpg')" href="/video/show/"
-        .video-title
-          = zh_lorem_sentence
+      a.video-item style="background-image: url('/images/post-2.jpg')" href="/video/show.html"
+        h3.video-title= zh_lorem_sentence
