--- a/sass/partial/_video-list.scss
+++ b/sass/partial/_video-list.scss
@@ -7,26 +7,26 @@
     display: block;
     margin: 2px 0px 0px 0px;
     @include adjust-font-size-to(18px);
-    overflow: hidden;
   }
 
   .video-item {
     position: relative;
     display: block;
     width: 100%;
-    height: 220px;
+    height: 0px;
+    padding-top: 56.25%;
     background-position: center center;
     background-repeat: no-repeat;
     @include background-size(cover);
 
     &:before {
       content: '';
-      display: inline-block;
+      display: block;
       position: absolute;
-      top: 0px;
-      left: 0px;
-      width: 100%;
-      height: 220px;
+      top: 50%;
+      bottom: 0;
+      left: 0;
+      right: 0;
       background: -webkit-linear-gradient(top,rgba(255,255,255,0),rgba(0,0,0,0.5)); /*Safari 5.1-6*/
       background: -o-linear-gradient(bottom,rgba(255,255,255,0),rgba(0,0,0,0.5)); /*Opera 11.1-12*/
       background: -moz-linear-gradient(bottom,rgba(255,255,255,0),rgba(0,0,0,0.5)); /*Fx 3.6-15*/
@@ -37,6 +37,7 @@
   .video-title {
     position: absolute;
     bottom: 12px;
+    @include trailer(0);
     padding: 0px 16px 0px 47px;
     font-weight: bold;
     color: #fff;
@@ -60,10 +61,11 @@
   }
 
   @include at-breakpoint($pad) {
+    @include pie-clearfix;
+    margin: 0 -1px;
     li {
       @include box-sizing(border-box);
-      display: inline-block;
-      margin-bottom: -7px;
+      float: left;
       padding: 0 1px;
       width: 50%;
       @include adjust-font-size-to(22px, 1.25);
@@ -78,7 +80,10 @@
 
   @include at-breakpoint($desktop) {
     li {
-      width: 33.333333%;
+      width: (100/3)*1%;
+    }
+    li:nth-child(3n) {
+      float: right;
     }
   }
 }
