--- a/sass/all.scss
+++ b/sass/all.scss
@@ -50,6 +50,7 @@
 @import "page/policies-page";
 @import "page/article-page";
 @import "page/global-page";
+@import "page/video-page";
 
 // ==== inbox ====
 .hide-phone {
