--- a/sass/partial/_video-list.scss
+++ b/sass/partial/_video-list.scss
@@ -6,7 +6,6 @@
   li {
     display: block;
     margin: 2px 0px 0px 0px;
-    @include adjust-font-size-to(18px);
   }
 
   .video-item {
@@ -17,30 +16,29 @@
     padding-top: 56.25%;
     background-position: center center;
     background-repeat: no-repeat;
+    background-color: #444;
     @include background-size(cover);
 
     &:before {
       content: '';
       display: block;
       position: absolute;
-      top: 50%;
+      top: 0;
       bottom: 0;
       left: 0;
       right: 0;
-      background: -webkit-linear-gradient(top,rgba(255,255,255,0),rgba(0,0,0,0.5)); /*Safari 5.1-6*/
-      background: -o-linear-gradient(bottom,rgba(255,255,255,0),rgba(0,0,0,0.5)); /*Opera 11.1-12*/
-      background: -moz-linear-gradient(bottom,rgba(255,255,255,0),rgba(0,0,0,0.5)); /*Fx 3.6-15*/
-      background: linear-gradient(to bottom, rgba(255,255,255,0), rgba(0,0,0,0.5)); /*Standard*/
+      @include background-image(linear-gradient(to bottom, rgba(black, 0) 25%, rgba(black, 0.5)));
     }
   }
 
   .video-title {
     position: absolute;
-    bottom: 12px;
+    bottom: 0;
     @include trailer(0);
-    padding: 0px 16px 0px 47px;
-    font-weight: bold;
+    padding: 12px 12px 12px 42px;
     color: #fff;
+    @include adjust-font-size-to(16px);
+    @extend %subpixel;
 
     &:before {
       font-family: 'icomoon';
@@ -54,9 +52,11 @@
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
       content: '\e800'; // 記得換
-      display: inline-block;
-      margin-left: -28px;
-      margin-right: 10px;
+      position: relative;
+      left: -30px;
+      top: 22px;
+      display: block;
+      font-size: 20px;
     }
   }
 
@@ -68,12 +68,17 @@
       float: left;
       padding: 0 1px;
       width: 50%;
-      @include adjust-font-size-to(22px, 1.25);
     }
+  }
 
+  @include at-breakpoint(840px) {
     .video-title {
+      // @include adjust-font-size-to(18px);
+      padding: 24px 24px 24px 56px;
+      @include adjust-font-size-to(22px, 1.15);
       &:before {
-        margin-right: 7px;
+        font-size: 24px;
+        top: 25px;
       }
     }
   }
