--- a/video/index.html.slim
+++ b/video/index.html.slim
@@ -4,7 +4,7 @@
 
 .content
 
-  a.video-hero href="/video/show.html"
+  a.video-hero style="background-image: url('/images/post-header-image.jpg')" href="/video/show.html"
     .video-content
       h3.video-title.auto-break-text= zh_lorem_sentence
       span.video-date 2015.10.04
