新增客製化 youtube 影片播放

--- a/_layout_javascript.html.slim
+++ b/_layout_javascript.html.slim
@@ -6,3 +6,6 @@
   "/vendor/jquery.waypoints.sticky.min.js", \
   "/vendor/dropdown", \
   "all"
+
+- if @page_name == "video-page"
+  = javascript_include_tag "video.js"
