--- a/sass/partial/_post.scss
+++ b/sass/partial/_post.scss
@@ -302,11 +302,35 @@
     position: relative;
     background-color: transparent;
     @include background-image(none);
+    &.is-playing {
+      .post-cover-image {
+        visibility:hidden;
+        opacity:0;
+        @include transition(visibility 0s 0.5s, opacity 0.5s);
+      }
+    }
+  }
+  .post-player {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-top: 56.25%;
+  }
+  .post-player-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
   .post-cover-image {
-    position: relative;
-    padding-top: 56.25%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 0;
+    padding-top: 56.25%;
+    @include opacity(1);
     &:before {
       top: 48px;
       @include background-image(linear-gradient(to bottom, rgba(black, 0), rgba(black, 0.5)));
@@ -326,6 +350,7 @@
     color: white;
     @include adjust-font-size-to(60px, 2.5);
     @include transition(opacity 0.25s);
+    cursor: pointer;
     &:hover {
       @include opacity(0.8);
       text-decoration: none;
@@ -363,13 +388,29 @@
 
   @include at-breakpoint($pad) {
     .post-cover {
-      background-color: #444;
-      padding-top: 50%;
+      background-color: black;
+      &.is-playing {
+        .post-cover-inner {
+          visibility:hidden;
+          opacity:0;
+          @include transition(visibility 0s 0.5s, opacity 0.5s);
+        }
+      }
+    }
+    .post-player {
+      height: auto;
+      padding-top: 0;
+      max-width: 960px;
+      margin: 0 auto;
+    }
+    .post-player-inner {
+      position: relative;
+      width: 100%;
+      padding-top: 56.25%;
     }
     .post-cover-image {
-      position: absolute;
+      height: 100%;
       padding-top: 0;
-      height: auto;
     }
     .post-cover-inner {
       position: absolute;
@@ -378,21 +419,25 @@
       bottom: 0;
       margin: 0 auto;
       padding: 24px 24px 5%;
-      max-width: 480px;
+      max-width: 560px;
+    }
+    .post-title {
+      @include adjust-font-size-to(28px, 1.5);
     }
   }
-  @include at-breakpoint(768px) {
-    .post-cover {
-      padding-top: 45%;
+
+  @include at-breakpoint(840px) {
+    .post-player {
+      width: 90%;
     }
   }
+
   @include at-breakpoint($desktop) {
-    .post-cover {
-      padding-top: 40%;
+    .post-player {
+      width: 100%;
     }
     .post-cover-inner {
       padding: 48px;
-      max-width: 560px;
     }
     .play-btn {
       @include adjust-font-size-to(84px, 4);
@@ -403,11 +448,6 @@
     }
     .post-title {
       @include adjust-font-size-to(36px, 2);
-    }
-  }
-  @include at-breakpoint(1320px) {
-    .post-cover {
-      padding-top: 35%;
     }
   }
 
