--- a/video/show.html.slim
+++ b/video/show.html.slim
@@ -12,7 +12,7 @@
         .post-cover-image style="background-image: url('/images/post-header-image.jpg')"
           a#play-btn.play-btn.icon-play
         .post-cover-inner
-          h2.post-title.auto-break-text= zh_lorem_sentences(2)
+          h2.post-title.auto-break-text 經濟發展新模式──安倍經濟學的挑戰
       .post-share
         span.post-share-title 分享：
         a.post-share-btn.icon-facebook href="#" target="_blank"
@@ -30,3 +30,4 @@
         a.pager-item.pager-item_return href="#" 返回文章列表
         a.pager-item.next href="#": .pager-title 下一篇
 
+  = render '/partial/video-list'
