--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -134,7 +134,7 @@ body { font-family: "Helvetica Neue", "Helvetica", "Arial", "STHeitiTC-Light","M
 
 code { font-family: "Anonymous Pro", "Inconsolata", "Consolas Regular Font", "Monaco", "Courier New" ,MonoSpace; font-weight: 400; font-style: normal; }
 
-.btn, .form-label, .card, .breadcrumb li + li:before, .breadcrumb a { -webkit-font-smoothing: subpixel-antialiased; }
+.btn, .form-label, .card, .breadcrumb li + li:before, .breadcrumb a, .video-hero, .video-list .video-title { -webkit-font-smoothing: subpixel-antialiased; }
 
 body { -webkit-text-size-adjust: 100%; -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; color: #444444; }
 
@@ -861,10 +861,13 @@ body { background-color: #183840; position: relative; }
 @media (min-width: 640px) and (max-height: 640px) { .post_bg-image-style .post-cover-inner { padding-top: 240px; } }
 
 .post_video .post-cover { margin: 0 0 12px; position: relative; background-color: transparent; background-image: none; }
-.post_video .post-cover-image { position: relative; padding-top: 56.25%; height: 0; }
+.post_video .post-cover.is-playing .post-cover-image { visibility: hidden; opacity: 0; -webkit-transition: visibility 0s, opacity 0.5s; -webkit-transition-delay: 0.5s, 0s; -moz-transition: visibility 0s 0.5s, opacity 0.5s; -o-transition: visibility 0s 0.5s, opacity 0.5s; transition: visibility 0s 0.5s, opacity 0.5s; }
+.post_video .post-player { position: relative; width: 100%; height: 0; padding-top: 56.25%; }
+.post_video .post-player-iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+.post_video .post-cover-image { position: absolute; top: 0; left: 0; width: 100%; height: 0; padding-top: 56.25%; opacity: 1; }
 .post_video .post-cover-image:before { top: 48px; background-image: -webkit-gradient(linear, to bottom, to top, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.5))); background-image: -webkit-linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); background-image: -moz-linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); background-image: -o-linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); }
 .post_video .post-cover-inner { padding: 24px 24px 0; }
-.post_video .play-btn { position: absolute; top: 50%; left: 50%; margin-left: -30px; margin-top: -30px; display: block; width: 60px; color: white; font-size: 60px; line-height: 60px; -webkit-transition: opacity 0.25s; -moz-transition: opacity 0.25s; -o-transition: opacity 0.25s; transition: opacity 0.25s; }
+.post_video .play-btn { position: absolute; top: 50%; left: 50%; margin-left: -30px; margin-top: -30px; display: block; width: 60px; color: white; font-size: 60px; line-height: 60px; -webkit-transition: opacity 0.25s; -moz-transition: opacity 0.25s; -o-transition: opacity 0.25s; transition: opacity 0.25s; cursor: pointer; }
 .post_video .play-btn:hover { opacity: 0.8; text-decoration: none; }
 .post_video .post-share .post-share-btn { color: rgba(255, 255, 255, 0.75); }
 .post_video .post-summary { max-width: 560px; margin: 0 auto; color: white; }
@@ -874,15 +877,18 @@ body { background-color: #183840; position: relative; }
 .post_video .pager-item_return:hover { color: white; }
 .post_video .next:before { border-color: transparent transparent transparent rgba(221, 221, 221, 0.5); }
 .post_video .pager-title { background-color: rgba(221, 221, 221, 0.5); }
-@media (min-width: 640px) { .post_video .post-cover { background-color: #444; padding-top: 50%; }
-  .post_video .post-cover-image { position: absolute; padding-top: 0; height: auto; }
-  .post_video .post-cover-inner { position: absolute; left: 0; right: 0; bottom: 0; margin: 0 auto; padding: 24px 24px 5%; max-width: 480px; } }
-@media (min-width: 768px) { .post_video .post-cover { padding-top: 45%; } }
-@media (min-width: 1025px) { .post_video .post-cover { padding-top: 40%; }
-  .post_video .post-cover-inner { padding: 48px; max-width: 560px; }
-  .post_video .play-btn { font-size: 84px; line-height: 96px; width: 96px; height: 96px; margin-top: -48px; margin-left: -48px; }
+@media (min-width: 640px) { .post_video .post-cover { background-color: black; }
+  .post_video .post-cover.is-playing .post-cover-inner { visibility: hidden; opacity: 0; -webkit-transition: visibility 0s, opacity 0.5s; -webkit-transition-delay: 0.5s, 0s; -moz-transition: visibility 0s 0.5s, opacity 0.5s; -o-transition: visibility 0s 0.5s, opacity 0.5s; transition: visibility 0s 0.5s, opacity 0.5s; }
+  .post_video .post-player { height: auto; padding-top: 0; max-width: 960px; margin: 0 auto; }
+  .post_video .post-player-inner { position: relative; width: 100%; padding-top: 56.25%; }
+  .post_video .post-cover-image { height: 100%; padding-top: 0; }
+  .post_video .play-btn { font-size: 72px; line-height: 96px; width: 96px; height: 96px; margin-top: -48px; margin-left: -48px; }
+  .post_video .post-cover-inner { position: absolute; left: 0; right: 0; bottom: 0; margin: 0 auto; padding: 24px 24px 5%; max-width: 560px; } }
+@media (min-width: 840px) { .post_video .post-player { width: 90%; } }
+@media (min-width: 1025px) { .post_video .post-player { width: 100%; }
+  .post_video .post-cover-inner { padding: 48px; }
+  .post_video .play-btn { font-size: 84px; line-height: 96px; }
   .post_video .post-title { font-size: 36px; line-height: 48px; } }
-@media (min-width: 1320px) { .post_video .post-cover { padding-top: 35%; } }
 
 .article .lead { margin-top: 0px; }
 .article h3 { margin-bottom: 24px; font-size: 21px; line-height: 24px; color: black; font-weight: bold; }
@@ -1019,38 +1025,41 @@ body { background-color: #183840; position: relative; }
 .scroll-spy-menu .scroll-spy-menu-item.is-active { background-color: white; }
 @media (min-width: 1025px) { .scroll-spy-menu { display: block; } }
 
-.video-hero { position: relative; display: block; background-color: #444; color: white; width: 100%; padding-top: 56.25%; }
-.video-hero:before { content: ''; position: absolute; top: 50%; left: 0; right: 0; bottom: 0; background-image: -webkit-gradient(linear, to bottom, to top, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.25))); background-image: -webkit-linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.25)); background-image: -moz-linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.25)); background-image: -o-linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.25)); background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.25)); }
+.video-hero { position: relative; display: block; background-color: #444; color: white; width: 100%; padding-top: 56.25%; background-position: center center; background-repeat: no-repeat; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+.video-hero:before { content: ''; position: absolute; top: 0%; left: 0; right: 0; bottom: 0; background-image: -webkit-gradient(linear, to bottom, to top, color-stop(50%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.5))); background-image: -webkit-linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.5)); background-image: -moz-linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.5)); background-image: -o-linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.5)); background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.5)); }
 .video-hero:hover { text-decoration: none; color: white; }
-.video-hero .video-content { position: absolute; left: 0; right: 0; bottom: 0; padding: 24px 12px 24px 42px; }
-.video-hero .video-title { font-size: 16px; line-height: 24px; font-weight: bold; margin-bottom: 0px; }
+.video-hero .video-content { position: absolute; left: 0; right: 0; bottom: 0; padding: 12px 12px 12px 42px; }
+.video-hero .video-title { font-size: 16px; line-height: 24px; margin-bottom: 0px; }
 .video-hero .video-title:before { font-family: 'icomoon'; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; line-height: 1; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; content: "\e800"; position: relative; left: -30px; top: 22px; display: block; font-size: 20px; }
 .video-hero .video-date { display: none; }
 .video-hero .video-summary { display: none; }
 @media (min-width: 640px) { .video-hero { padding-top: 50%; }
-  .video-hero:before { top: 0; width: 400px; background-image: -webkit-gradient(linear, to right, to left, color-stop(0%, rgba(0, 0, 0, 0.25)), color-stop(100%, rgba(0, 0, 0, 0))); background-image: -webkit-linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0)); background-image: -moz-linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0)); background-image: -o-linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0)); background-image: linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0)); }
+  .video-hero:before { top: 0; width: 100%; max-width: 500px; background-image: -webkit-gradient(linear, to right, to left, color-stop(320px, rgba(0, 0, 0, 0.3)), color-stop(100%, rgba(0, 0, 0, 0))); background-image: -webkit-linear-gradient(to right, rgba(0, 0, 0, 0.3) 320px, rgba(0, 0, 0, 0)); background-image: -moz-linear-gradient(to right, rgba(0, 0, 0, 0.3) 320px, rgba(0, 0, 0, 0)); background-image: -o-linear-gradient(to right, rgba(0, 0, 0, 0.3) 320px, rgba(0, 0, 0, 0)); background-image: linear-gradient(to right, rgba(0, 0, 0, 0.3) 320px, rgba(0, 0, 0, 0)); }
   .video-hero .video-content { padding: 36px 36px 36px 72px; width: 320px; }
   .video-hero .video-title { font-size: 24px; line-height: 30px; margin-bottom: 12px; }
   .video-hero .video-title:before { left: -42px; top: 30px; font-size: 30px; }
   .video-hero .video-date { display: block; font-size: 15px; line-height: 24px; color: #ccc; }
   .video-hero .video-summary { font-size: 15px; line-height: 24px; display: block; margin-bottom: 0px; } }
+@media (min-width: 768px) { .video-hero { padding-top: 45%; } }
 @media (min-width: 1025px) { .video-hero { padding-top: 40%; }
-  .video-hero .video-content { padding: 60px 60px 60px 120px; width: 450px; }
-  .video-hero .video-title { font-size: 36px; line-height: 36px; margin-bottom: 24px; }
+  .video-hero:before { max-width: 620px; background-image: -webkit-gradient(linear, to right, to left, color-stop(500px, rgba(0, 0, 0, 0.25)), color-stop(100%, rgba(0, 0, 0, 0))); background-image: -webkit-linear-gradient(to right, rgba(0, 0, 0, 0.25) 500px, rgba(0, 0, 0, 0)); background-image: -moz-linear-gradient(to right, rgba(0, 0, 0, 0.25) 500px, rgba(0, 0, 0, 0)); background-image: -o-linear-gradient(to right, rgba(0, 0, 0, 0.25) 500px, rgba(0, 0, 0, 0)); background-image: linear-gradient(to right, rgba(0, 0, 0, 0.25) 500px, rgba(0, 0, 0, 0)); }
+  .video-hero .video-content { padding: 4.75% 4.75% 4.75% 9.5%; width: 440px; }
+  .video-hero .video-title { font-size: 36px; line-height: 42px; margin-bottom: 24px; }
   .video-hero .video-title:before { left: -50px; top: 36px; font-size: 36px; }
   .video-hero .video-date { font-size: 16px; line-height: 24px; color: #ddd; }
   .video-hero .video-summary { font-size: 16px; line-height: 24px; margin-bottom: 0px; } }
 
 .video-list { list-style: none; margin: 0px; padding: 0px; }
-.video-list li { display: block; margin: 2px 0px 0px 0px; font-size: 18px; line-height: 24px; }
-.video-list .video-item { position: relative; display: block; width: 100%; height: 0px; padding-top: 56.25%; background-position: center center; background-repeat: no-repeat; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
-.video-list .video-item:before { content: ''; display: block; position: absolute; top: 50%; bottom: 0; left: 0; right: 0; background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.5)); /*Safari 5.1-6*/ background: -o-linear-gradient(bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.5)); /*Opera 11.1-12*/ background: -moz-linear-gradient(bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.5)); /*Fx 3.6-15*/ background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.5)); /*Standard*/ }
-.video-list .video-title { position: absolute; bottom: 12px; margin-bottom: 0px; padding: 0px 16px 0px 47px; font-weight: bold; color: #fff; }
-.video-list .video-title:before { font-family: 'icomoon'; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; line-height: 1; /* Better Font Rendering =========== */ -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; content: '\e800'; display: inline-block; margin-left: -28px; margin-right: 10px; }
+.video-list li { display: block; margin: 2px 0px 0px 0px; }
+.video-list .video-item { position: relative; display: block; width: 100%; height: 0px; padding-top: 56.25%; background-position: center center; background-repeat: no-repeat; background-color: #444; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+.video-list .video-item:before { content: ''; display: block; position: absolute; top: 0; bottom: 0; left: 0; right: 0; background-image: -webkit-gradient(linear, to bottom, to top, color-stop(25%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.5))); background-image: -webkit-linear-gradient(to bottom, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.5)); background-image: -moz-linear-gradient(to bottom, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.5)); background-image: -o-linear-gradient(to bottom, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.5)); background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.5)); }
+.video-list .video-title { position: absolute; bottom: 0; margin-bottom: 0px; padding: 12px 12px 12px 42px; color: #fff; font-size: 16px; line-height: 24px; }
+.video-list .video-title:before { font-family: 'icomoon'; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; line-height: 1; /* Better Font Rendering =========== */ -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; content: '\e800'; position: relative; left: -30px; top: 22px; display: block; font-size: 20px; }
 @media (min-width: 640px) { .video-list { margin: 0 -1px; }
   .video-list:after { content: ""; display: table; clear: both; }
-  .video-list li { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: left; padding: 0 1px; width: 50%; font-size: 22px; line-height: 30px; }
-  .video-list .video-title:before { margin-right: 7px; } }
+  .video-list li { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: left; padding: 0 1px; width: 50%; } }
+@media (min-width: 840px) { .video-list .video-title { padding: 24px 24px 24px 56px; font-size: 22px; line-height: 27px; }
+  .video-list .video-title:before { font-size: 24px; top: 25px; } }
 @media (min-width: 1025px) { .video-list li { width: 33.3333333333%; }
   .video-list li:nth-child(3n) { float: right; } }
 
@@ -1273,6 +1282,8 @@ body { background-color: #183840; position: relative; }
   .global-page .page-bottom-illustrator:before, .global-page .page-bottom-illustrator:after { margin-bottom: 0%; } }
 
 .video-page .page-inner { background-color: #183840; }
+.video-page .post { margin-bottom: 24px; }
+@media (min-width: 640px) { .video-page .post { margin-bottom: 48px; } }
 
 .hide-phone { display: none; }
 @media (min-width: 640px) { .hide-phone { display: block; } }
