修正連結錯誤

--- a/global/show.html.slim
+++ b/global/show.html.slim
@@ -3,7 +3,7 @@
 / 假設現在為英文語系
 - @language = "en"
 
-= render '/global/header'
+= render '/partial/header'
 
 .content
   .post.post_bg-image-style
@@ -69,5 +69,3 @@
   / .banner-block
   /   .container.container_single-article
   /     = render :partial => "/partial/banner"
-
-= render "/posts/fb-setting.erb"
