移動 youtube api 位置

--- a/_layout_javascript.html.slim
+++ b/_layout_javascript.html.slim
@@ -7,5 +7,5 @@
   "/vendor/dropdown", \
   "all"
 
-- if @page_name == "video-page"
-  = javascript_include_tag "video.js"
+/ - if @page_name == "video-page"
+/   = javascript_include_tag "video.js"
