--- a/sass/partial/_video-list.scss
+++ b/sass/partial/_video-list.scss
@@ -1,11 +1,13 @@
 .video-list {
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
 
-  li {
-    display: block;
-    margin: 2px 0px 0px 0px;
+  .video-items {
+    list-style: none;
+    margin: 0 0 rhythm(2);
+    padding: 0px;
+    li {
+      display: block;
+      margin: 2px 0px 0px 0px;
+    }
   }
 
   .video-item {
@@ -60,15 +62,27 @@
     }
   }
 
-  @include at-breakpoint($pad) {
-    @include pie-clearfix;
-    margin: 0 -1px;
-    li {
-      @include box-sizing(border-box);
-      float: left;
-      padding: 0 1px;
-      width: 50%;
+  .video-list-action {
+    text-align: center;
+    .btn {
+      padding: 6px 48px;
     }
+  }
+
+  @include at-breakpoint($pad) {
+    overflow-x: hidden;
+
+    .video-items {
+      @include pie-clearfix;
+      margin: 0 -1px rhythm(2);
+      li {
+        @include box-sizing(border-box);
+        float: left;
+        padding: 0 1px;
+        width: 50%;
+      }
+    }
+
   }
 
   @include at-breakpoint(840px) {
@@ -84,11 +98,14 @@
   }
 
   @include at-breakpoint($desktop) {
-    li {
-      width: (100/3)*1%;
-    }
-    li:nth-child(3n) {
-      float: right;
+    .video-items {
+      margin: 0 -1px rhythm(2.5);
+      li {
+        width: (100/3)*1%;
+      }
+      li:nth-child(3n) {
+        float: right;
+      }
     }
   }
 }
